updated for zchen website

--- a/_sass/_utilities.scss
+++ b/_sass/_utilities.scss
@@ -173,6 +173,7 @@
 // Link styles for navigation
 .link-primary {
   font-weight: bold;
+  font-size: x-large;
   text-decoration: none;
 
   &:hover {
