--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,13 @@
 <header class="border-bottom-thick px-2 clearfix">
   <div class="left sm-width-full py-1 mt-1 mt-lg-0">
-    <a class="align-middle link-primary text-accent" href="{{ site.baseurl }}/">
+    <!-- <a class="align-middle link-primary text-accent" href="{{ site.baseurl }}/"> -->
+    <!--   {{ site.title }} -->
+    <!-- </a> -->
+
+    <a class="align-middle link-primary mr-2 mr-lg-0 ml-lg-2" href="{{ site.baseurl }}/">
       {{ site.title }}
     </a>
+    
   </div>
   <div class="right sm-width-full">
     <ul class="list-reset mt-lg-1 mb-2 mb-lg-1">
