--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -28,38 +28,34 @@
             <div class="col-4 sm-width-full left border-top-thin">
               <div class="table">
                 <div class="inline-block mt-3 mr-1">
-                  {% include dot-accent.html %}
+                  {% include gscholar.html %}
                 </div>
                 <div class="inline-block mt-3 mr-1">
-                  {% include dot-accent.html %}
-                </div>
-                <div class="inline-block mt-3">
                   {% include github.html %}
                 </div>
+                <div class="inline-block mt-3">
+                  {% include linkedin.html %}
+		  <!-- {% include {{ site.social_link | default: "twitter" }}.html %} -->
+                </div>
+		
               </div>
               <!-- Set site description in config.yml -->
               <p class="h4 lh-condensed font-smoothing mt-2 py-1">{{ site.description }}</p>
             </div>
 
-            <div class="col-4 sm-width-full left border-top-thin mt-3 mt-lg-0 ml-lg-4 table">
-                <div class="inline-block mt-3 mr-1">
-                  {% include dot.html %}
-                </div>
-                <div class="inline-block mt-3">
-                  {% include {{ site.social_link | default: "twitter" }}.html %}
-                </div>
-            </div>
-          </div>
+          <!--   <div class="col-4 sm-width-full left border-top-thin mt-3 mt-lg-0 ml-lg-4 table"> -->
+          <!--       <div class="inline-block mt-3 mr-1"> -->
+          <!--         {% include dot.html %} -->
+          <!--       </div> -->
+          <!--       <div class="inline-block mt-3"> -->
+          <!--         {% include {{ site.social_link | default: "twitter" }}.html %} -->
+          <!--       </div> -->
+          <!--   </div> -->
+          <!-- </div> -->
 
         </div>
       </header>
-
-      <div class="container mx-auto px-2 py-4">
-        {% for post in site.posts %}
-          {% include post_block.html %}
-        {% endfor %}
-      </div>
-
+      
     </div>
 
     {% include footer.html %}
