--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,7 +3,8 @@ layout: default
 ---
 <article class="container mx-auto px-2 mt2 mb4">
   <header>
-    <h1 class="h0 py-4 mt-3">{{ page.title }}</h1>
+    <!-- <h3 class="h0 py-4 mt-3">{{ page.title }}</h3> -->
+    <h1>{{ page.title }} </h1>
   </header>
   <div class="col-4 sm-width-full border-top-thin">
   </div>
